--- a/index.html
+++ b/index.html
@@ -21,41 +21,47 @@
     </header>
 <!--REVISIT: Not sure if the below element should be in the header or main-->
     <div class="hero">
-        <h1>This website is awesome</h1>
-        <p class="hero-text">This website has some subtext that goes here under the main title.
-            It's a smaller font and the color is lower contrast.</p>
-        <button type="button">Sign up</button>
-        <img src="./images/google-spinner.png" alt="google-spinner">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p class="hero-text">This website has some subtext that goes here under the main title.
+                It's a smaller font and the color is lower contrast.</p>
+            <button type="button" class="hero-button">Sign up</button>
+        </div>
+        <img src="./images/user-icon.png" class="hero-image" alt="google-spinner">
     </div>
-
-    <div class="main">
-        <h2>Some random information.</h2>
-            <img src="./images/cancel.png" alt="cancel">
-            <div class="text">This is some subtext under an illustration or image</div>
-          </div>
-          <div class="plants">
-            <img src="./images/blank-file.png" alt="blank-file">
-            <div class="text">This is some subtext under an illustration or image</div>
-          </div>
-          <div class="plants">
-            <img src="./images/hexagon.png" alt="hexagon-arrows">
-            <div class="text">This is some subtext under an illustration or image</div>
-          </div>
-          <div class="plants">
-            <img src="./images/plus.png" alt="plus-sign">
-            <div class="text">This is some subtext under an illustration or image</div>
+    <h2>Some random information.</h2>
+    <div class="main-container">
+        <div class="main">
+                <img src="./images/cancel.png" alt="cancel">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="main">
+                <img src="./images/blank-file.png" alt="blank-file">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="main">
+                <img src="./images/hexagon.png" alt="hexagon-arrows">
+                <div class="text">This is some subtext under an illustration or image</div>
+            </div>
+            <div class="main">
+                <img src="./images/plus.png" alt="plus-sign">
+                <div class="text">This is some subtext under an illustration or image</div>
+        </div>
     </div>
     <div class="testimonial">
         <p class="testimonial-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space,
             or maybe people will actually read it. Who knows? All I know is that it looks nice </p>
-            <h3>-Thor, God of Thunder</h3>
+            <h3 class="testimonial-user">-Thor, God of Thunder</h3>
     </div>
-    <div class="cta">
-        <h4>Call to action! It's time!</h4>
-        <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
-        <button type="button">Sign up</button>
-    </div>
-    <div class="footer">
+    <div id="cta-important" class="cta">
+        <div class="cta-container">
+            <h4 class="cta-header">Call to action! It's time!</h4>
+            <div id="cta-text-important" class="cta-text">Sign up for our product by clicking that button right over there!</div>
+        </div>
+            <button type="button" class="cta-button">Sign up</button>
+        </div>
+    
+    <div class="footer-text">
         Copyright © The Odin Project 2021
     </div>
 </body>
