Fix margins and links
updated top margin for footer and side margins for cta; header links

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="logo">Header Logo</div>
         <div class="menu">
             <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="https://www.google.com">Google</a></li>
+                <li><a href="https://www.youtube.com">Youtube</a></li>
+                <li><a href="https://www.facebook.com">Facebook</a></li>
             </ul>
         </div>
 
